--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
-    "express": "4.16.3",
-    "pg": "8.0.3",
-    "redis": "2.8.0",
-    "cors": "2.8.4",
-    "nodemon": "1.18.3",
-    "body-parser": "*"
+    "body-parser": "1.19.1",
+    "cors": "2.8.5",
+    "express": "4.17.2",
+    "nodemon": "2.0.15",
+    "pg": "8.7.1",
+    "redis": "4.0.1"
   },
   "scripts": {
     "dev": "nodemon",
