--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,12 +1,11 @@
 FROM node:alpine as builder
-#WORKDIR '/app'
-COPY ./package.json .
-RUN npm install
+WORKDIR /app
+COPY ./package.json ./package.json
 COPY . .
-CMD ['ls', '.']
+RUN npm install
 RUN npm run build
 
-FROM nginx
-EXPOSE 3000
-COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder ./public /usr/local/bin/nginx/html
+#FROM nginx
+#EXPOSE 3000
+#COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+#COPY --from=builder ./public /usr/local/bin/nginx/html
