--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:alpine as builder
 WORKDIR /app
-COPY ./package.json ./package.json
+#COPY ./package.json ./package.json
 COPY . .
 RUN npm install
 RUN npm run build
