--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,9 @@
 FROM node:alpine as builder
 WORKDIR /app
 #COPY ./package.json ./package.json
-COPY . .
+COPY ./package.json /app
 RUN npm install
+COPY . /app
 RUN npm run build
 
 #FROM nginx
