--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:alpine as builder
 #WORKDIR /app
 #COPY ./package.json ./package.json
-COPY .package.json .
-RUN npm install
+RUN echo $pwd
 COPY . .
+RUN npm install
 RUN npm run build
 
 #FROM nginx
