--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:alpine as builder
-WORKDIR ./app
-COPY .package.json .
+WORKDIR '/app'
+COPY ./package.json ./
 RUN npm install
 COPY . .
-RUN npm run build
+CMD ["npm", "run", "start"]
 
 #FROM nginx
 #EXPOSE 3000
