--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,17 +3,17 @@ RUN mkdir -p /var/www/html
 
 WORKDIR /var/www/html
 
+RUN pwd
 EXPOSE 3000
 
 COPY package.json /var/www/html/
 
-RUN cd /var/www/html/
 
-RUN npm install
+#RUN npm install
 
-COPY . .
+#COPY . .
 
-RUN npm run build
+#RUN npm run build
 
 
 CMD ["npm", "run", "start"]
