--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,12 +4,7 @@ RUN mkdir -p /dist
 
 WORKDIR /var/www/html
 
-EXPOSE 3000
-
 COPY client/package.json /var/www/html/
-
-RUN ls .
-
 
 RUN npm install
 
@@ -20,4 +15,4 @@ RUN npm run build
 FROM nginx
 EXPOSE 3000
 COPY client/nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder ./public /etc/nginx/html
+COPY --from=builder client/public /etc/nginx/html
