--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -15,4 +15,6 @@ RUN npm run build
 FROM nginx
 EXPOSE 3000
 COPY client/nginx/default.conf /etc/nginx/conf.d/default.conf
+RUN ls .
+
 #COPY --from=builder public /etc/nginx/html
