--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -2,7 +2,7 @@ server {
   listen 3000;
 
   location / {
-    root /var/www/html/public/;
+    root /var/www/html/home;
     index index.html index.htm;
     try_files $uri $uri/ /index.html;
   }
