--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -15,6 +15,5 @@ RUN npm run build
 FROM nginx
 EXPOSE 3000
 COPY client/nginx/default.conf /etc/nginx/conf.d/default.conf
-RUN ls .
 
-#COPY --from=builder public /etc/nginx/html
+COPY --from=builder /var/www/html/public /etc/nginx/html
