--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -16,4 +16,4 @@ FROM nginx
 EXPOSE 3000
 COPY client/nginx/default.conf /etc/nginx/conf.d/default.conf
 
-COPY --from=builder /var/www/html/public /etc/nginx/html
+COPY --from=builder /var/www/html/client/public /etc/nginx/html
