--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,5 @@
 FROM node:alpine as builder
 RUN mkdir -p /var/www/html
-RUN mkdir -p /var/www/html/dist
 
 WORKDIR /var/www/html
 
@@ -8,20 +7,17 @@ COPY client/package.json /var/www/html/
 
 RUN npm install
 
-RUN npm i -g tree
-
-RUN which tree
-
 COPY client /var/www/html/
 
-RUN npm run build
+RUN ls /var/www/html/
+RUN ls /var/www/html/client
+RUN ls /var/www/html/client/public
 
-RUN tree . -l 3
+
+RUN npm run build
 
 FROM nginx
 EXPOSE 3000
 COPY client/nginx/default.conf /etc/nginx/conf.d/default.conf
 
 COPY --from=builder /var/www/html /etc/nginx/html
-
-RUN tree . -l 3
