--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -2,8 +2,8 @@ server {
   listen 3000;
 
   location / {
-    root /etc/nginx/html;
-    index index.html index.htm;
-    try_files $uri $uri/ /index.html;
+    root /;
+    index index.html;
+    try_files /index.html;
   }
 }
