--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -2,8 +2,14 @@ server {
   listen 3000;
 
   location / {
-    root /;
+    root /home;
     index index.html;
     try_files /index.html;
   }
+
+  location /other {
+      root /etc/nginx/html;
+      index index.html;
+      try_files /index.html;
+    }
 }
