--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,13 +7,13 @@ WORKDIR /var/www/html
 #
 #RUN npm install
 
-COPY client/public /var/www/html
+COPY public /var/www/html
 
 #RUN npm run build
 
 FROM nginx
 EXPOSE 3000
-COPY client/nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 
 COPY --from=builder /var/www/html /etc/nginx/html
 
